<resources>
    <string name="app_name">PuyDuFou</string>

    <string name="button_discover">Show planning</string>
    <string name="button_plan">Custom planning</string>
    <string name="button_entertainment">Quizz &amp; Photo</string>
    <string name="title_activity_show_planning">Shows</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_today">Today</string>
    <string name="action_day_view">One day</string>
    <string name="action_three_day_view">Three days</string>
    <string name="action_week_view">Week</string>
    <string name="title_activity_planning_creator">Custom plan</string>
    <string name="planning_creator_recommended">Best planning</string>
    <string name="add_event_title">Add show</string>
    <string name="title_activity_show_details">Show Detail</string>
    <string name="planning_creator_reset">Reset</string>
    <string name="planning_creator_reset_title">Reset</string>
    <string name="planning_creator_reset_message">Are you sure?</string>
    <string name="planning_creator_reset_positive">Confirm</string>
    <string name="planning_creator_reset_negative">Cancel</string>
    <string name="dialog_rate_title">Rate show</string>    <string name="planning_creator_delete">Delete</string>
    <string name="button_recommended_plan">Recommended planning</string>
    <string name="title_activity_recommended_planning">Recommended planning</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_category_recommended">Recommended planning</string>
    <string name="settings_lunch_time">Lunch time</string>
    <string name="settings_lunch_duration">Lunch duration</string>
    <string name="settings_start">Arrive date</string>
    <string name="settings_end">End date</string>
    <string name="settings_pause_number">Break number</string>
    <string name="settings_pause_variation">Break duration variation</string>
    <string name="settings_pause_duration">Pause duration</string>
    <string name="progress_dialog">Loading events</string>
    <string name="please_wait">Please wait</string>
    <string name="title_activity_entertainment">Entertainment</string>
    <string name="action_photo">Take photo</string>
    <string name="social_view_title">Share Picture</string>    <string name="preference_file_key">preference_file_recommended_planning</string>
    <string name="saved_start_time">savedStartTime</string>
    <string name="saved_end_time">savedEndTime</string>
    <string name="saved_lunch_time">savedLunchTime</string>
    <string name="saved_break_count">savedBreakCount</string>
    <string name="saved_break_duration">savedBreakDuration</string>
    <string name="saved_break_variation">savedBreakVariation</string>
    <string name="default_start_time">9:30</string>
    <string name="default_end_time">18:00</string>
    <string name="default_lunch_time">12:30</string>
    <string name="saved_lunch_duration">savedLunchDuration</string>
    <string name="button_resto">Restaurants &amp; Shops</string>
    <string name="title_activity_restaurant_shop">Restaurant and Shop</string>
    <string name="resto_title">Restaurants</string>
    <string name="shop_title">Shops</string>
    <string name="app_id">580878858721697</string>
</resources>
