<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lazywell.android.puydufou.activities.PlanningCreatorActivity">
    <item android:id="@+id/planning_creator_recommended"
        android:title="@string/planning_creator_recommended"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/planning_creator_reset"
        android:title="@string/planning_creator_reset"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/planning_creator_delete"
        android:title="@string/planning_creator_delete"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:visible="true"/>
</menu>
