<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeActivity"
    android:weightSum="1">

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/button_discover"
        android:id="@+id/button_discover"
        android:layout_gravity="center_vertical"
        android:layout_above="@+id/button_plan"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/button_plan"
        android:id="@+id/button_plan"
        android:layout_gravity="center_vertical"
        android:layout_above="@+id/button_recommended_plan"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/button_entertainment"
        android:id="@+id/button_entertainment"
        android:layout_gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/button_recommended_plan"
        android:id="@+id/button_recommended_plan"
        android:layout_gravity="center_vertical"
        android:layout_above="@+id/button_resto"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/button_resto"
        android:id="@+id/button_resto"
        android:layout_gravity="center_vertical"
        android:layout_above="@+id/button_entertainment"
        android:layout_alignParentStart="true" />

</RelativeLayout>
