<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.lazywell.android.puydufou.activities.SettingsActivity" >

    <com.gc.materialdesign.views.Slider
        android:id="@+id/lunch_slider"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#1E88E5"
        materialdesign:max="50"
        materialdesign:min="0"
        materialdesign:showNumberIndicator="true"
        android:layout_marginTop="9dp"
        android:layout_below="@+id/settings_title_lunch_duration"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/settings_category_recommended"
        android:id="@+id/settings_category_recommended"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/settings_lunch_duration"
        android:id="@+id/settings_title_lunch_duration"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/arrive_date_label"
        android:layout_alignEnd="@+id/settings_title_break_duration" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/settings_lunch_time"
        android:id="@+id/settings_title_lunch_time"
        android:layout_alignTop="@+id/settings_title_end"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/settings_start"
        android:id="@+id/settings_title_start"
        android:layout_below="@+id/settings_category_recommended"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/settings_end"
        android:id="@+id/settings_title_end"
        android:layout_below="@+id/settings_category_recommended"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/settings_pause_number"
        android:id="@+id/settings_title_break_count"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/lunch_slider"
        android:layout_alignParentStart="true" />

    <com.gc.materialdesign.views.Slider
        android:id="@+id/break_count_slider"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#1E88E5"
        materialdesign:max="10"
        materialdesign:min="0"
        materialdesign:showNumberIndicator="true"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/settings_title_break_count" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/settings_pause_duration"
        android:id="@+id/settings_title_break_duration"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/break_count_slider"
        android:layout_alignParentStart="true" />

    <com.gc.materialdesign.views.Slider
        android:id="@+id/break_duration_slider"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#1E88E5"
        materialdesign:max="60"
        materialdesign:min="0"
        materialdesign:showNumberIndicator="true"
        android:layout_below="@+id/settings_title_break_duration"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/settings_pause_variation"
        android:id="@+id/settings_title_break_variation"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/break_duration_slider"
        android:layout_alignParentStart="true" />

    <com.gc.materialdesign.views.Slider
        android:id="@+id/break_variation_slider"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#1E88E5"
        materialdesign:max="30"
        materialdesign:min="0"
        materialdesign:showNumberIndicator="true"
        android:layout_below="@+id/settings_title_break_variation"
        android:layout_alignStart="@+id/settings_title_lunch_duration"
        android:layout_marginTop="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="00:00"
        android:id="@+id/end_date_label"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/settings_title_end"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="00:00"
        android:id="@+id/lunch_date_label"
        android:layout_alignTop="@+id/end_date_label"
        android:layout_alignEnd="@+id/settings_title_lunch_time"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="00:00"
        android:id="@+id/arrive_date_label"
        android:layout_alignTop="@+id/end_date_label"
        android:layout_alignStart="@+id/settings_title_lunch_duration"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/settings_value_lunch_duration"
        android:layout_below="@+id/settings_title_lunch_duration"
        android:layout_alignStart="@+id/settings_title_lunch_duration" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/settings_value_break_count"
        android:layout_below="@+id/settings_title_break_count"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/settings_value_break_duration"
        android:layout_below="@+id/settings_title_break_duration"
        android:layout_alignStart="@+id/break_variation_slider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/settings_value_break_variation"
        android:layout_below="@+id/settings_title_break_variation"
        android:layout_alignParentStart="true" />

</RelativeLayout>
